--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <select id="issueSeverityInput" class="form-control">
                   <option value="Low">Low</option>
                   <option value="Medium">Medium</option>
-                  <option value"High">High</option>
+                  <option value="High">High</option>
                 </select>
               </div>
               <div class="form-group">
@@ -48,8 +48,6 @@
 
       </div>
   
-    
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="http://chancejs.com/chance.min.js"></script>
